# cubui

./: .gitignore  .gitigonre  CMakeLists.txt  LICENSE  README.md  规范.txt  设计.txt
build-util/: tool.py
build-util/temp/: license.txt
src/: CMakeLists.txt
src/demo/: CMakeLists.txt  demolistnode.cpp  demosignal.cpp  demouniquearray.cpp  demovector.cpp  demovulkan.cpp
src/include/cubui/: BaseInterface.hpp  cubui.h  widget.hpp
src/include/cubui/basic/: basic.h  event.h  main.h  window.h  windowbase.h
src/include/cubui/common/: basetype.h  camera.h  common.h  config.h  cutype.h  global.cpp  global.h  mesh.h  predef.h  scene.h  surface.h  typebase.hpp  typedef.h  typedef.hpp  usefultype.h  window.h
src/include/cubui/config/: config.h  confignode.h  cubuiconfig.h  loggingconfig.h  predef.h  renderconfig.h  windowconfig.h
src/include/cubui/container/: arrayref.h  buffer.h  container.h  hashmap.h  intrusive_list.h  list.h  listnode.h  map.h  string.h  uniquearray.h  vector.hpp
src/include/cubui/core/: event.h  global.cpp  global.h  init.cpp  init.h  point.h  renderer.h  window.h
src/include/cubui/ext/: vulkaninc.h  windowsinc.h
src/include/cubui/framework/: baseinterface.h  baseinterface.hpp  message.h  message.hpp  scene2d.h
src/include/cubui/graphic/: mesh.h  primitive.h  renderer.h  renderoutput.h  scene.h
src/include/cubui/impl/vulkan/: config.cpp  config.h  cuvulkan.h  global.h  renderer.cpp  vkBasicResource.cpp  vkBasicResource.h  vkfuncext.h  vkhelpler.cpp  vkhelpler.h  vkwrapper.h  vulkanheader.h
src/include/cubui/impl/windows/basic/: event.cpp  global.h  window.cpp  windowbase.cpp
src/include/cubui/impl/windows/common/: config.h
src/include/cubui/math/: vector.h
src/include/cubui/platform/sdl/common/: init.cpp  window.cpp
src/include/cubui/platform/sdl/core/: init.h  window.cpp
src/include/cubui/platform/windows/common/: config.h
src/include/cubui/platform/windows/window/: global.h
src/include/cubui/platform/windows/wrapper/: msgloop.cpp  msgloop.h  window.cpp
src/include/cubui/scene/: SimpleScene.h  UIScene.h
src/include/cubui/template/: typebuild.hpp
src/include/cubui/util/: confignode.h  fmt.h  initnode.h  logging.cpp  logging.h  logging_m.h  loggingconfig.cpp  loggingconfig.h  optionalx.hpp  signal.h  smartptr.h  smartptr.hpp  string.h
src/include/cubui/window/: event.h  window.h
src/include/cubui/wrapper/os_windows/: os_windows_wrap.h
src/include/cubui/wrapper/os_windows/base/: base.h  windowbase.cpp  windowbase.h
src/include/cubui/wrapper/os_windows/common/: common.h  globalvar.h  typedef.h
src/include/cubui/wrapper/os_windows/test/: main.cpp  test1.h
src/include/efgui/: message.hpp  widget.hpp
src/include/efgui/common/: optionalx.hpp  smartptr.hpp  typebase.hpp  typebuild.hpp  typedef.hpp  vectorx.hpp
src/include/efgui/platform/windows/wrapper/: efgui.h  globalvar.h  msgloop.cpp  msgloop.h  window.cpp  windowbase.h
src/test/: CMakeLists.txt  buildlog.txt  log.txt  main.cpp  test.cpp  testarrayref.cpp
tmp/: draft.txt
